# my_manim_slides

./: .gitignore  manim.cfg  pyproject.toml
rl/intro/: main.py
rl/markov_example/: coin.py  markov.py
rl/robot/: robot.py
