[project]
name = "my-manim-slides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "factored-manim",
    "manim==0.19.1",
    "manim-ml>=0.0.24",
    "manim-slides>=5.5.2",
    "pyqt6",
]

[tool.uv.sources]
factored-manim = { git = "https://github.com/factoredai/factored-manim", rev = "0.1.1" }
